<resources>
    <string name="app_name">USI</string>
    <string name="txt_USI_fecha_hoy">Fecha de hoy</string>
    <string name="txt_USI_fecha_hoy_date">25/09/2020</string>
    <string name="tet_USI_desea_buscar">Seleccione que desea buscar</string>
    <string name="txt_USI_salas_description">Salas de Computo</string>
    <string name="txt_USI_salas">Salas</string>
    <string name="txt_USI_monitorias">Monitorias</string>
    <string name="txt_USI_monitorias_description">Monitorias de Salas</string>
    <string name="btn_USI_buscar">BUSCAR</string>
    <string name="opt_menu_preferencias">Preferencias</string>
    <string name="opt_menu_acerca_de">Acerca de</string>
    <string name="opt_menu_filtrar_disp">Filtrar por salas diponibles</string>
    <string name="opt_menu_filtrar_ocup">Filtrar por salas ocupadas</string>
    <string name="buscar_salas">buscar salas</string>
    <string name="txt_informacion_adicional">Informacion Adicional</string>
    <string name="txt_monitor_encargado_detalle">Monitor Encargado</string>
    <string name="txt_codigo_monitor_detalle">Codigo Monitor</string>
    <string name="txt_nombre_sala">Nombre de la sala</string>
    <string name="txt_correo_monitor_detalle">Correo Monitor</string>
    <string name="txt_masdetalles_item">Mas Detalles</string>
</resources>
